# map_to_img

./: CMakeLists.txt  README.md  package.xml
include/: MapAsImageProvider.h
launch/: test.launch
maps/: map.pgm
rviz/: test.rviz
src/: MapAsImageProvider.cpp  dummy_pose_publisher.cpp  map_to_img.cpp
