<?xml version="1.0"?>
<package format="2">
  <name>map_to_img</name>
  <version>1.0.0</version>
  <description>map_to_img</description>

  <maintainer email="hubert.zwiercan@husarion.com">Hubert Zwiercan</maintainer>
  <license>TODO</license>

  <author email="hubert.zwiercan@husarion.com">Hubert Zwiercan</author>
  <author email="lukasz.mitka@husarion.com">Łukasz Mitka</author>

<buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>hector_map_tools</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>eigen</build_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>hector_map_tools</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>eigen</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

  <export>
  </export>
</package>
